--- a/2013/1km paper/elastic_1km_epjc.tex
+++ b/2013/1km paper/elastic_1km_epjc.tex
@@ -1,6 +1,3 @@
-% needed?
-%\RequirePackage{fix-cm}
-
 \documentclass[pdftex,twocolumn,epjc3]{svjour3}
 
 \usepackage{amsmath}
@@ -22,7 +19,7 @@
 \def\vec#1{#1} % TODO
 \def\mat#1{\mathsf{#1}}
 \def\etal{et al.}
-\def\todo#1{{\bf\color{red} #1}}
+\def\todo#1{{\color{red} #1}}
 
 \setbox123\hbox{$0$}
 \setbox124\hbox{$.$}
@@ -31,7 +28,7 @@
 
 \def\thanksInst#1{\unskip\footnotemark[#1]}
 
-% TODO: needed
+% TODO: needed?
 \bgroup
 \catcode`\@=11
 
@@ -238,10 +235,7 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	%number = "3",
 	%doi = "http://dx.doi.org/10.1016/j.cpc.2013.11.016",
 
-
-
-
-\end{thebibliography}{99}
+\end{thebibliography}
 
 \iffalse
 
