--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -1,20 +1,19 @@
 \section{Experimental Apparatus}
-
-\todo{shorter? leave out T1 and T2?}\\
-\todo{the same as in 90m paper?}
-
-The TOTEM experiment is dedicated to the measurement of the total 
+%
+The TOTEM experiment, located at the LHC Interaction Point (IP) 5 together with
+the CMS experiment, is dedicated to the measurement of the total 
 cross-section, elastic scattering
-and diffractive processes at the LHC. The experimental
-apparatus, composed of three subdetectors
-(Roman Pots (RP), T1 and T2 forward tracking telescopes), 
-is placed symmetrically on both sides of Interaction Point (IP) 5, shared
-with the CMS experiment. All three subdetectors have
-trigger capability. The Roman Pot stations, equipped with
-silicon detectors and placed at 220\,m from the IP,
-detect elastically and diffractively scattered protons with
-small scattering angles down to a few $\mu$rad. 
-Each RP station is composed of two units separated
+and diffractive processes. The experimental
+apparatus, symmetric with respect to the IP, is 
+composed of a Roman Pot (RP) proton spectrometer and the forward tracking 
+telescopes T1 and T2. All subdetectors have trigger capability. 
+While a complete description of the TOTEM detector instrumentation 
+and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}, 
+the present article focusses on the data from the RP system, detecting 
+elastically and diffractively scattered protons with
+scattering angles of only a few $\mu$rad. 
+Each RP station, located between 215 and 220\,m from the IP, is composed of two 
+units separated
 by a distance of about 5\,m. A unit consists of 3 RPs, two
 approaching the outgoing beam vertically and one horizontally.
 Each RP is equipped with a stack of 10 silicon
@@ -28,11 +27,3 @@ with a precision of about $10\,\mu$rad, and a high trigger efficiency
 ($> 99$\%) can be achieved as the proton trigger selection
 uses all RPs independently.
 
-The T1 and T2 telescopes, placed at about 8 and 14\,m from the IP, 
-respectively, detect charged particles produced in the polar
-angular range from a few mrad to about 100 mrad. The T1 telescope
-($3.1 < |\eta| < 4.7$) consists of Cathode Strip Chambers,
-while the T2 telescope ($5.3 < |\eta| < 6.5$) is made of
-triple-GEM (Gas Electron Multipliers) chambers.
-
-A complete description of the TOTEM detector layout is given in~\cite{totem-jinst}.
