--- a/2013/1km paper/elastic_1km_epjc.tex
+++ b/2013/1km paper/elastic_1km_epjc.tex
@@ -85,7 +85,7 @@ imaginary parts of the forward hadronic elastic amplitude, was determined.
 
 % TODO
 \keywords{First keyword \and Second keyword \and More}
-\PACS{13.60.Hb} %{Total and inclusive cross sections (including deep-inelastic processes)}
+\PACS{13.60.Hb} % Total and inclusive cross sections (including deep-inelastic processes)
 %\preprint{CERN-PH-EP-2014-XXXX}
 \end{abstract}
 
@@ -103,9 +103,10 @@ imaginary parts of the forward hadronic elastic amplitude, was determined.
 
 %--------------------------------------------------
 
-\section{Discussion/Conclusions}
+\section{Summary}
 
-\> here or before ??
+\> emphasize very first results, original work
+\> emphasize novel methods, used for the first times
 
 
 %--------------------------------------------------
